--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+# Erase HomuraMachine.X folder
+HomuraMachine/HomuraMachine.X/*
