--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -347,6 +347,7 @@
     <ClInclude Include="Message.hpp" />
     <ClInclude Include="Message_base.hpp" />
     <ClInclude Include="Service.hpp" />
+    <ClInclude Include="System.hpp" />
     <ClInclude Include="System_base.hpp" />
     <ClInclude Include="Thermo.hpp" />
   </ItemGroup>
