--- a/HomuraMachine/Mihara/Mihara.vcxproj.filters
+++ b/HomuraMachine/Mihara/Mihara.vcxproj.filters
@@ -774,5 +774,8 @@
     <ClInclude Include="Message_base.hpp">
       <Filter>HomuraMachine\Mihara</Filter>
     </ClInclude>
+    <ClInclude Include="System.hpp">
+      <Filter>HomuraMachine\Mihara</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
