--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -127,12 +127,15 @@
     <ClCompile Include="..\..\XC32\sfr\uart4.cpp" />
     <ClCompile Include="..\..\XC32\sfr\uart5.cpp" />
     <ClCompile Include="..\..\XC32\sfr\uart6.cpp" />
-    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Com.cpp" />
+    <ClCompile Include="Courier.cpp" />
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="DeviceManage.cpp" />
     <ClCompile Include="DeviceManageMessage.cpp" />
     <ClCompile Include="GPS.cpp" />
+    <ClCompile Include="hmrDeviceManage.c" />
+    <ClCompile Include="hmrDeviceManageMessage.c" />
+    <ClCompile Include="Inertial.cpp" />
     <ClCompile Include="Mihara.cpp" />
     <ClCompile Include="Service.cpp" />
   </ItemGroup>
@@ -174,6 +177,7 @@
     <ClInclude Include="..\..\homuraLib_v2\chrono.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\code.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\crc8.h" />
+    <ClInclude Include="..\..\homuraLib_v2\delay.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\exceptions.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\gate.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\gate_adaptor.hpp" />
@@ -323,10 +327,13 @@
     <ClInclude Include="bitset.hpp" />
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="CO2.hpp" />
+    <ClInclude Include="CO2_separate.hpp" />
     <ClInclude Include="Com.hpp" />
+    <ClInclude Include="Courier.hpp" />
     <ClInclude Include="Data.hpp" />
     <ClInclude Include="Device.hpp" />
     <ClInclude Include="DeviceManage.hpp" />
+    <ClInclude Include="DeviceManageMessage.hpp" />
     <ClInclude Include="Drive.hpp" />
     <ClInclude Include="GPS.hpp" />
     <ClInclude Include="Inertial.hpp" />
